<resources>
    <string name="app_name">ContentProvider</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="notes">Notes</string>
    <string name="tasks">Tasks</string>
    <string name="note">Note</string>
    <string name="task">Task</string>
    <string name="title">Title</string>
    <string name="no_items">No items</string>
    <string name="save">save</string>
    <string name="descr_error">Description required</string>
    <string name="delete">Delete</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="delete_task_dialog_msg">Are you sure want to delete task?</string>
    <string name="delete_task_dialog_title">Delete task</string>
    <string name="delete_note_dialog_msg">Are you sure want to delete note?</string>
    <string name="delete_note_dialog_title">Delete note</string>
    <string name="db_item_transition_name">db_item_transition_name</string>
    <string name="toolbar_transition_name">toolbar_transition_name</string>
    <string name="some_action">Some action</string>
    <string name="search_hint">Search</string>
    <string name="share">Share</string>
    <string name="send_task">Send Task…</string>
    <string name="send_note">Send Note…</string>
</resources>
