<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".ui.screens.addNote.AddNoteActivity">

    <FrameLayout
        android:id="@+id/fl_progress_bar_add_task"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />

    </FrameLayout>

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_add_task"
        android:layout_width="match_parent"
        android:layout_height="?android:actionBarSize"
        android:background="@color/primaryColor"
        android:transitionName="@string/toolbar_transition_name"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_title_add_task"
        style="@style/TableItemTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_vertical_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginEnd="@dimen/activity_vertical_margin"
        android:hint="@string/title"
        app:layout_constraintTop_toBottomOf="@id/toolbar_add_task"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/et_description_add_task"
        style="@style/TableItemDescription"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/activity_vertical_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginEnd="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:focusedByDefault="true"
        android:gravity="top"
        android:hint="@string/description"
        android:inputType="textCapSentences|textMultiLine"
        android:transitionName="@string/db_item_transition_name"
        app:layout_constraintBottom_toTopOf="@id/spinner_task"
        app:layout_constraintTop_toBottomOf="@id/et_title_add_task"
        tools:ignore="Autofill"
        tools:targetApi="o" />

    <Spinner
        android:id="@+id/spinner_task"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_vertical_margin"
        android:layout_marginEnd="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        app:layout_constraintBottom_toTopOf="@id/mbtn_save_add_task" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/mbtn_save_add_task"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_vertical_margin"
        android:layout_marginEnd="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:text="@string/save"
        app:cornerRadius="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:strokeColor="@color/primaryColor"
        app:strokeWidth="@dimen/dimen_1_5dp" />

</androidx.constraintlayout.widget.ConstraintLayout>